--- a/cosmic-defi/package.json
+++ b/cosmic-defi/package.json
@@ -12,13 +12,18 @@
     "@headlessui/react": "^2.2.6",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.83.0",
+    "@uniswap/token-lists": "^1.0.0-beta.34",
+    "coingecko-api": "^1.0.10",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^3.1.0",
+    "swr": "^2.3.4",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0",
     "zustand": "^5.0.6"
