--- a/cosmic-defi/package.json
+++ b/cosmic-defi/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
+    "mongodb": "^6.18.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
