--- a/cosmic-defi/package.json
+++ b/cosmic-defi/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.83.0",
     "@uniswap/token-lists": "^1.0.0-beta.34",
+    "@1inch/cross-chain-sdk": "file:../../monad-backend/cross-chain-sdk",
     "coingecko-api": "^1.0.10",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.9",
