--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,10 +14,6 @@
     "mongoose": "^8.16.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "nodemon": "^3.1.10"
   }
 }
