--- a/cosmic-defi/package.json
+++ b/cosmic-defi/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@uniswap/token-lists": "^1.0.0-beta.34",
     "coingecko-api": "^1.0.10",
+    "crypto": "^1.0.1",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
