--- a/monad-backend/.env.example
+++ b/monad-backend/.env.example
@@ -1,4 +1,4 @@
 SRC_CHAIN_RPC=https://eth.merkle.io
-DST_CHAIN_RPC=wss://bsc-rpc.publicnode.com
+DST_CHAIN_RPC=https://testnet-rpc.monad.xyz
 SRC_CHAIN_CREATE_FORK=true
 DST_CHAIN_CREATE_FORK=true
